feat: Implement vocabulary saving from the context menu, integrating new `@repo/config` and `@repo/database` packages, and standardizing `@repo/i18n` for localization

--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -25,7 +25,8 @@
             }
         },
         "common": {
-            "menu": "Menu"
+            "menu": "Menu",
+            "context_menu": "Check \"%s\""
         }
     }
 }
