--- a/packages/i18n/locales/zh-tw.json
+++ b/packages/i18n/locales/zh-tw.json
@@ -25,7 +25,8 @@
             }
         },
         "common": {
-            "menu": "選單"
+            "menu": "選單",
+            "context_menu": "查詢 \"%s\""
         }
     }
 }
