feat: columns added

--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -38,7 +38,8 @@
             "table": {
                 "word": "Word",
                 "url": "Link",
-                "created_at": "Created At"
+                "action": "Action",
+                "remove": "Remove"
             }
         },
         "common": {
