feat: add lookup column to the vocabulary page

--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -50,7 +50,7 @@
             "table": {
                 "word": "Word",
                 "url": "Link",
-                "action": "Action",
+                "lookup": "Lookup",
                 "remove": "Remove"
             },
             "delete": {
