chore: remove google as llm option

--- a/packages/i18n/locales/zh-hk.json
+++ b/packages/i18n/locales/zh-hk.json
@@ -25,8 +25,7 @@
                 "placeholder": "請選擇",
                 "name": {
                     "perplexity": "Perplexity",
-                    "googleAI": "Google（AI 摘要）",
-                    "google": "Google"
+                    "googleAI": "Google（AI 摘要）"
                 }
             },
             "new_tab": {
