--- a/packages/i18n/locales/en.json
+++ b/packages/i18n/locales/en.json
@@ -25,8 +25,7 @@
                 "placeholder": "Pick one",
                 "name": {
                     "perplexity": "Perplexity",
-                    "googleAI": "Google (AI overview)",
-                    "google": "Google"
+                    "googleAI": "Google (AI overview)"
                 }
             },
             "new_tab": {
