--- a/packages/i18n/locales/ja.json
+++ b/packages/i18n/locales/ja.json
@@ -25,8 +25,7 @@
                 "placeholder": "選択してください",
                 "name": {
                     "perplexity": "Perplexity",
-                    "googleAI": "Google（AI概要）",
-                    "google": "Google"
+                    "googleAI": "Google（AI概要）"
                 }
             },
             "new_tab": {
